--- a/OpenGLTest/CMakeLists.txt
+++ b/OpenGLTest/CMakeLists.txt
@@ -9,7 +9,7 @@ include_directories(/usr/local/include)
 link_directories(/usr/local/lib)
 
 
-add_executable(demo main.cpp glad.c)
+add_executable(demo main.cpp glad.c Shader.cpp Shader.h)
 
 target_link_libraries(${PROJECT_NAME} libglfw.dylib)
 
